# mdsea

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tmp_docs.md
examples/: analysis.py  basic.py  cleanup.py  cprofile_blender.py  initsetup.py  rdf.py  vis_blender.py  vis_matplotlib.py  vis_mayavi.py  vis_mpl.py  vis_vapory.py  vis_vpython.py
mdsea/: __init__.py  _version.py  analytics.py  config.py  core.py  f_constants.py  gen.py  helpers.py  potentials.py  quicker.py  simulator.py
mdsea/constants/: __init__.py  fileman.py
mdsea/vis/: __init__.py  blender.py  blender_materials.py  blender_objetcs.py  matplotlib.py  mayavi.py  mpl.py  myv.py  vapory.py  vpr.py  vpy.py  vpython.py
tests/: __init__.py  analysis.py  basic.py  cleanup.py  cprofile_blender.py  initsetup.py  test_mdsea.py  vis_blender.py  vis_mayavi.py  vis_mpl.py  vis_vapory.py  vis_vpython.py
tests/simfiles/: _mdsea_logdump.log.1
tests/simfiles/1538397800590594/: data.h5  settings.pkl
tests/simfiles/15383978493773692/: data.h5  settings.pkl
tests/simfiles/1538397861445703/: data.h5  settings.pkl
tests/simfiles/1538397888005295/: data.h5  settings.pkl
tests/simfiles/1538397922044137/: data.h5  settings.pkl
tests/simfiles/153839798067062/: data.h5  settings.pkl
tests/simfiles/1538397989177496/: data.h5  settings.pkl
tests/simfiles/1538397998120244/: data.h5  settings.pkl
tests/simfiles/1538398065709079/: data.h5  settings.pkl
tests/simfiles/1538405283445861/: settings.pkl
tests/simfiles/1538405305644562/: data.h5  settings.pkl
tests/simfiles/1538405310676725/: data.h5  settings.pkl
tests/simfiles/1538405317092145/: data.h5  settings.pkl
tests/simfiles/1538405326695092/: data.h5  settings.pkl
tests/simfiles/15384053439869518/: data.h5  settings.pkl
tests/simfiles/15384053626578822/: data.h5  settings.pkl
tests/simfiles/1538405376101723/: data.h5  settings.pkl
tests/simfiles/1538405403926561/: data.h5  settings.pkl
tests/simfiles/15384054148260381/: data.h5  settings.pkl
tests/simfiles/15384054347092102/: data.h5  settings.pkl
tests/simfiles/15384054424879098/: data.h5  settings.pkl
tests/simfiles/1538405472745124/: data.h5  settings.pkl
tests/simfiles/1538405479307103/: data.h5  settings.pkl
tests/simfiles/1538405507292018/: data.h5  settings.pkl
tests/simfiles/1538405525647016/: data.h5  settings.pkl
tests/simfiles/1538584717173683/: data.h5  settings.pkl
tests/simfiles/15386240746140218/: data.h5  settings.pkl
tests/simfiles/1538624368596125/: data.h5  settings.pkl
tests/simfiles/15386245184780428/: data.h5  settings.pkl
tests/simfiles/1538624874193783/: data.h5  settings.pkl
tests/simfiles/1538624891279433/: data.h5  settings.pkl
tests/simfiles/1538624898676498/: data.h5  settings.pkl
tests/simfiles/15386250919353201/: data.h5  settings.pkl
tests/simfiles/1538625108209632/: data.h5  settings.pkl
tests/simfiles/1538625125339871/: data.h5  settings.pkl
tests/simfiles/1538625141842068/: data.h5  settings.pkl
tests/simfiles/1538625195918658/: data.h5  settings.pkl
tests/simfiles/1538625211503124/: data.h5  settings.pkl
tests/simfiles/15386252294475362/: data.h5  settings.pkl
tests/simfiles/1538625255628638/: data.h5  (+1 more)
(+32 files in other folders)
