[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | \.git-crypt
    | \.pytest_cache
    | \.idea
    | \.circleci
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
