[metadata]
name = mdsea
version = file:VERSION
description = Molecular Dynamics Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tpvasconcelos/mdsea
author = Tomas Pereira de Vasconcelos
author_email = tomasvasconcelos@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
keywords = fluid dynamics, particle, simulation
project_urls =
    Documentation = https://github.com/tpvasconcelos/mdsea
    Funding = https://donate.pypi.org
    Source = https://github.com/tpvasconcelos/mdsea
    Tracker = https://github.com/tpvasconcelos/mdsea/issues

[options]
packages = find:
install_requires =
    h5py~=3.0.0
    numpy~=1.19.0
    rich~=9.6.0
    scipy~=1.5.0
    importlib-metadata~=1.0;python_version < "3.8"
python_requires = >=3.7.1,<4.0
include_package_data = True

[options.entry_points]
console_scripts =
    mdsea = mdsea.cli:main

[options.extras_require]
dev =
    ipython==7.21.0
    pytest==6.2.2
    pytest-cov==2.11.1
    sphinx==3.5.1
    tox==3.22.0
matplotlib =
    PyQt5~=5.15.0
    matplotlib~=3.4.0
mayavi =
    PyQt5~=5.15.0
    mayavi~=4.7.0
vapory =
    Vapory~=0.1.1
vpython =
    Pillow~=8.2.0
    vpython~=7.6.0

[bdist_wheel]
universal = True

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:VERSION]
search = {current_version}
replace = {new_version}

[flake8]
exclude =
    docs,
    .venv,
    build,
    *.pyi,
    .git,
    build,
    .tox
max-line-length = 120

[isort]
profile = black
src_paths = tpv,tests
combine_as_imports = true
include_trailing_comma = true
known_first_party = tpv
line_length = 79
